Create the file `recipe/meta.yaml`.
[source,yaml]
----
include::recipe/meta.yaml[]
----

This is all that is needed to create this git repository `my-conda-pkg-feedstock`.
I want the branch to be called `main` rather than `master`.
[source,cmd]
----
git config --global init.defaultBranch main
----
Now the directory and git repository are made.
[source,cmd]
----
mamba smithy init .\recipe
----

The feedstock needs to be registered with github.
First the tokens need to be made available to `mamba smithy`.
The tokens are placed in the `~/.conda-smithy` folder and are given names corresponding to the tool.

anaconda.token::: https://anaconda.org/mesomorph/settings/access
github.token:::  https://github.com/settings/tokens

[source,cmd]
----
mamba smithy register-github --user phreed ./my-conda-pkg-feedstock
----

The tricky part of this is the registration of all the tokens required by the various build tooling.
The tokens are placed in files in the `~/.conda-smithy` folder and are given names corresponding to the tool.
**Each of these files contains the token and only the token**.

These tools frequently change their usage policies and where to acquire their respective tokens.
Having many builders is important for `conda-forge` as it needs to be concerned with issues like performance.
But, for building channels that parallel `conda-forge` supporting most of these tools is a headache.
If you need one of these tools
link:https://github.com/conda-forge/conda-smithy/tree/main/conda_smithy/templates[the template]
for each of these build tools may be informative.
It is helpful to disable the tools which you do not need.
See `mamba smithy register-ci -h` for a list of all the flags.

I only use the tokens for `github` which does my builds, and `anaconda` which is my target.

[source,cmd]
----
mamba smithy register-ci --user phreed --without-drone --without-azure --without-appveyor --feedstock_directory ./my-conda-pkg-feedstock
----
