@@ -4,6 +4,6 @@ channels:
   targets:
     - [mesomorph, main]
 provider:
-  osx: Github-Actions
-  linux: Github-Actions
-  win: Github-Actions
+  osx: github_actions
+  linux: github_actions
+  win: github_actions
